# BookGram

./: README.md
bookgram-api/: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml
bookgram-api/alembic/: env.py  script.py.mako
bookgram-api/alembic/versions/: 001_initial.py  12a33139df0f_add_test_user.py  26a311441e93_add_files_and_users_tables.py
bookgram-api/app/: __init__.py  main.py
bookgram-api/app/api/: __init__.py  health.py
bookgram-api/app/api/v1/: __init__.py  books.py  files.py
bookgram-api/app/core/: config.py
bookgram-api/app/db/: __init__.py  session.py
bookgram-api/app/db/models/: __init__.py  file.py  user.py
bookgram-api/app/db/schemas/: __init__.py  file.py
bookgram-api/app/models/: __init__.py  book.py
bookgram-api/app/schemas/: __init__.py  book.py
bookgram-api/app/services/: __init__.py  book.py  file_service.py  user_service.py
bookgram-api/deploy/: Containerfile  README.md  compose.yaml
bookgram-api/documentation/: initial_prompt.txt  post_savefile.md
bookgram-api/tests/: conftest.py  test_books.py  test_file_service.py  test_file_validation.py  test_health.py  test_user_service.py
